# OpenGL-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/workflows/: auto-clang-format.yml  ci.yml  cmake.yml
Dredgen/: Aopass.cpp  Aopass.h  Deferrdpass.cpp  Deferrdpass.h  Editor.cpp  Framebuffer.cpp  Framebuffer.h  Light.h  Log.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PostAApass.cpp  Postprocesspass.cpp  RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shadowmpass.cpp  Skybox.cpp  Vertex.h  main.cpp  utils.cpp
Dredgen-gl/: Aopass.cpp  Aopass.h  Asset.h  Camera.h  Deferrdpass.cpp  Deferrdpass.h  Editor.cpp  Editor.h  Framebuffer.cpp  Framebuffer.h  Light.cpp  Light.h  Log.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PostAApass.cpp  PostAApass.h  Postprocesspass.cpp  Postprocesspass.h  RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shader.h  Shadowmpass.cpp  Shadowpass.h  Skybox.cpp  Skybox.h  Uniformbuffer.cpp  Uniformbuffer.h  Vertex.h  Window.cpp  Window.h  imgui.ini  imgui_integrate.cpp  main.cpp  utils.cpp  utils.h
Dredgen/Editor/: Editor.cpp  Editor.h
Dredgen/GFX/: gfx.h
Dredgen/GFX/DX11/: gfx_dx11.cpp  gfx_dx11.h
Dredgen/GFX/OpenGL/: gfx_ogl.cpp  gfx_ogl.h
Dredgen/Imgui/: imgui_impl_dx11.cpp  imgui_impl_dx11.h
Dredgen/Passes/: FXAA.cpp  FXAA.h  Geometry.cpp  Geometry.h  PostProcess.cpp  PostProcess.h  SSAO.cpp  SSAO.h  Shadow.cpp  Shadow.h  Skybox.cpp  Skybox.h
Dredgen/Render/: Framebuffer.cpp  RenderEngine.cpp  RenderEngine.h  Shader.cpp  ci.yml
Dredgen/Scene/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
Dredgen/Utils/: Log.h  Utils.h
Dredgen/Window/: window.cpp  window.h
cmake/: compileoptions.cmake
resources/shaders/: aops.glsl  aovs.glsl  bxdf.glsl  defaultps.glsl  defaultvs.glsl  geopassps.glsl  geopassvs.glsl  lightingpassps.glsl  lightingpassvs.glsl  lightscattering.glsl  modelgs.glsl  modelps.glsl  modelvs.glsl  postaaps.glsl  postaavs.glsl  postprocesssps.glsl  postprocesssvs.glsl  shadowps.glsl  skyboxps.glsl  skyboxvs.glsl
